Rating control on main page

--- a/MyPlaces/Base.lproj/Main.storyboard
+++ b/MyPlaces/Base.lproj/Main.storyboard
@@ -225,27 +225,30 @@
                                                             </constraints>
                                                         </imageView>
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="So4-so-fA5">
-                                                            <rect key="frame" x="101" y="9.3333333333333357" width="273" height="66.333333333333314"/>
+                                                            <rect key="frame" x="101" y="9.3333333333333357" width="57" height="66.333333333333314"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5bW-81-zyp">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="273" height="23.666666666666668"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="57" height="23.666666666666668"/>
                                                                     <fontDescription key="fontDescription" name="Thonburi" family="Thonburi" pointSize="18"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dtk-OJ-ExT">
-                                                                    <rect key="frame" x="0.0" y="26.666666666666664" width="273" height="19.333333333333336"/>
+                                                                    <rect key="frame" x="0.0" y="26.666666666666664" width="57" height="19.333333333333336"/>
                                                                     <fontDescription key="fontDescription" name="Thonburi-Light" family="Thonburi" pointSize="15"/>
                                                                     <color key="textColor" red="0.36681420720000002" green="0.36681420720000002" blue="0.36681420720000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="Type" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RVj-1p-ylO">
-                                                                    <rect key="frame" x="0.0" y="49" width="273" height="17.333333333333329"/>
+                                                                    <rect key="frame" x="0.0" y="49" width="57" height="17.333333333333329"/>
                                                                     <fontDescription key="fontDescription" name="Thonburi-Light" family="Thonburi" pointSize="13"/>
                                                                     <color key="textColor" red="0.37647330759999997" green="0.37646564840000002" blue="0.37647080420000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                             </subviews>
+                                                        </stackView>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="200" placeholderIntrinsicHeight="69" translatesAutoresizingMaskIntoConstraints="NO" id="Giq-S2-xhT" customClass="RatingOnTable" customModule="MyPlaces" customModuleProvider="target">
+                                                            <rect key="frame" x="174" y="8" width="200" height="69"/>
                                                         </stackView>
                                                     </subviews>
                                                     <constraints>
@@ -265,6 +268,7 @@
                                             <outlet property="imageOfPlace" destination="jnU-hs-fXz" id="0gG-A4-2Ht"/>
                                             <outlet property="locationLabel" destination="dtk-OJ-ExT" id="wTt-WR-eFt"/>
                                             <outlet property="nameLabel" destination="5bW-81-zyp" id="Y6g-Ms-5TY"/>
+                                            <outlet property="ratingOfPlace" destination="Giq-S2-xhT" id="Rzz-7Q-cqV"/>
                                             <outlet property="typeLabel" destination="RVj-1p-ylO" id="4v8-1E-0sY"/>
                                             <segue destination="7G2-gr-TMs" kind="show" identifier="showDetail" id="jSX-SV-DNa"/>
                                         </connections>
@@ -372,6 +376,9 @@
         </scene>
     </scenes>
     <designables>
+        <designable name="Giq-S2-xhT">
+            <size key="intrinsicContentSize" width="200" height="69"/>
+        </designable>
         <designable name="xoX-jh-GT3">
             <size key="intrinsicContentSize" width="252" height="44"/>
         </designable>
