--- a/MyPlaces/Base.lproj/Main.storyboard
+++ b/MyPlaces/Base.lproj/Main.storyboard
@@ -122,7 +122,7 @@
                                                     </constraints>
                                                     <state key="normal" image="Placeholder"/>
                                                     <connections>
-                                                        <segue destination="FkP-SI-vli" kind="presentation" identifier="getAddress" id="stj-tc-1Cc"/>
+                                                        <segue destination="FkP-SI-vli" kind="presentation" identifier="getAddress" modalPresentationStyle="fullScreen" id="stj-tc-1Cc"/>
                                                     </connections>
                                                 </button>
                                             </subviews>
@@ -259,9 +259,10 @@
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mng-Kl-lhP">
                                 <rect key="frame" x="158" y="756" width="74" height="48"/>
+                                <color key="backgroundColor" systemColor="labelColor"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
                                 <state key="normal" title="Done">
-                                    <color key="titleColor" systemColor="labelColor"/>
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
                                     <action selector="doneButtonPressed" destination="FkP-SI-vli" eventType="touchUpInside" id="2y9-yh-jZL"/>
@@ -509,7 +510,7 @@
         </designable>
     </designables>
     <inferredMetricsTieBreakers>
-        <segue reference="8Sv-1D-8Cr"/>
+        <segue reference="stj-tc-1Cc"/>
         <segue reference="jSX-SV-DNa"/>
     </inferredMetricsTieBreakers>
     <resources>
