--- a/MyPlaces/IBuilder/Base.lproj/Main.storyboard
+++ b/MyPlaces/IBuilder/Base.lproj/Main.storyboard
@@ -259,10 +259,9 @@
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mng-Kl-lhP">
                                 <rect key="frame" x="158" y="756" width="74" height="48"/>
-                                <color key="backgroundColor" systemColor="labelColor"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
                                 <state key="normal" title="Done">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="titleColor" systemColor="labelColor"/>
                                 </state>
                                 <connections>
                                     <action selector="doneButtonPressed" destination="FkP-SI-vli" eventType="touchUpInside" id="2y9-yh-jZL"/>
